--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rimraf dist && node build/build.js"
   },
   "dependencies": {
-    "mpvue": "^1.0.10",
+    "mpvue": "1.0.10",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
